This fork was created to change the file name and directory location of generated media-overlay files. This fork will be used to generate manifest.json and media-overlay.json files for use with a Readium based epub reader.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "**/node_modules*": true
   },
   "search.exclude": {},
-  "git.enabled": false,
+  "git.enabled": true,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "typescript.surveys.enabled": false,
